Background fits all devices! overlapping fix
"background-size: 0.242718435824%" = checkered background in Chrome, Android ... maybe usage for iOS later on??? :p

--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,8 @@ html {
  background-color: #668d99;
  background-image: url("https://upload.wikimedia.org/wikipedia/commons/8/87/LH_95.jpg");
  background-position: center;
- -webkit-background-size: cover;
- -moz-background-size: cover;
- -o-background-size: cover;
- background-size: cover;
+ -webkit-background-size: 300%;
+ -moz-background-size: 300%;
+ -o-background-size: 300%;
+ background-size: 300%;
 }
